# app/Http/Controllers/Api/JobController.php
@@ -1,0 +1,101 @@
+<?php
+
+namespace App\Http\Controllers\Api;
+
+use App\Http\Controllers\Controller;
+use Illuminate\Http\Request;
+use App\Models\Job;
+use App\Http\Requests\TaskPackRequest;
+use App\Jobs\CryptTaskJob;
+use App\Services\HashService;
+use Bus;
+
+class JobController extends BaseController
+{
+
+    /**
+     * @OA\Get(
+     *      path="/jobs",
+     *      operationId="getJobs",
+     *      tags={"jobs"},
+     *      summary="Получение списка jobs",
+     *      description="Метод возвращает данные ...",
+     * 
+     *     @OA\Response(
+     *          response=200,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/Task")
+     *     )
+     * )
+     * 
+     */
+    public function index()
+    {
+        
+        $jobs = Job::all();
+        return $this->sendResponse($jobs);
+    }
+
+
+    /**
+     * Show the form for creating a new resource.
+     *
+     * @return \Illuminate\Http\Response
+     */
+    public function create()
+    {
+        //
+    }
+
+    
+
+    public function store(TaskPackRequest $request)
+    {
+        
+    }
+
+    /**
+     * Display the specified resource.
+     *
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function show($id)
+    {
+        //
+    }
+
+    /**
+     * Show the form for editing the specified resource.
+     *
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function edit($id)
+    {
+        //
+    }
+
+    /**
+     * Update the specified resource in storage.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function update(Request $request, $id)
+    {
+        //
+    }
+
+    /**
+     * Remove the specified resource from storage.
+     *
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function destroy($id)
+    {
+        
+    }
+}
